overflow fixed again

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@ html, body {overflow-x: hidden !important;
 body{
   box-sizing: border-box !important;
 }
+.containerr{
+  overflow-x: hidden !important;
+  max-width: 100%;
+}
 #nav-hero{
   position: relative;
   background-image: url('../public/hero_1.jpg');
